@@ -174,6 +174,8 @@ EMM options:
 
 ECM options:
  -X --ecm-pid <pid>         | Force ECM pid. Default: none
+ -v --ecm-only              | Send only ECMs to CAMD, skipping EMMs and without
+                            .   decoding the input stream.
  -H --ecm-report-time <sec> | Report each <sec> how much ECMs and CWs have been
                             .   processed/skipped. Set <sec> to 0 to disable
                             .   the reports. Default: 60 sec
@@ -181,6 +183,9 @@ ECM options:
  -K --ecm-no-log            | Disable ECM and code words logging.
  -J --cw-warn-time <sec>    | Warn if no valid code word has been received.
                             .   Set <sec> to 0 to disable. Default: 60 sec
+
+ -q --ecm-and-emm-only      | Send ECMs and EMMs to CAMD but do not decode
+                            .   the input stream.
 
 Logging options:
  -S --syslog                | Log messages using syslog.
